# mcp-twelvedata

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
src/mcp_twelvedata/: __init__.py  server.py
tests/: test_server.py
